Prevent crash and emit warning when receiving bogus drop events.

Task-number: QTBUG-33635

Change-Id: I6d436bc4d47d1d6b063fc2cf27d67fe4684e7491
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>